add try catch
